added model reuse and consistent sizing, fixed reconnect

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="stream_merger.js"></script>
     <script type="text/javascript" src="stats.js"></script>
     <script type="text/javascript" src="snow.js"></script>
+    <script type="text/javascript" src="snowbase.js"></script>
     <script type="text/javascript" src="snowmesh.js"></script>
     <script type="text/javascript" src="snowsfu.js"></script>
     <script type="text/javascript" src="snowmcu.js"></script>
