--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,15 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="stream_merger.js"></script>
-    <script type="text/javascript" src="stats.js"></script>
-    <script type="text/javascript" src="snow.js"></script>
-    <script type="text/javascript" src="snowbase.js"></script>
-    <script type="text/javascript" src="snowmesh.js"></script>
-    <script type="text/javascript" src="snowsfu.js"></script>
-    <script type="text/javascript" src="snowmcu.js"></script>
-    <script type="text/javascript" src="snowmcutwo.js"></script>
-    <script type="text/javascript" src="snowmcumulti.js"></script>
+    <script type="text/javascript" src="js/stream_merger.js"></script>
+    <script type="text/javascript" src="js/stats.js"></script>
+    <script type="text/javascript" src="js/snow.js"></script>
+    <script type="text/javascript" src="js/snowbase.js"></script>
+    <script type="text/javascript" src="js/snowmesh.js"></script>
+    <script type="text/javascript" src="js/snowsfu.js"></script>
+    <script type="text/javascript" src="js/snowmcu.js"></script>
+    <script type="text/javascript" src="js/snowmcutwo.js"></script>
+    <script type="text/javascript" src="js/snowmcumulti.js"></script>
     <script>
       const socket = io()
       const mediaConstraints = {
