--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="js/stream_merger.js"></script>
+    <script type="text/javascript" src="js/merger.js"></script>
     <script type="text/javascript" src="js/stats.js"></script>
     <script type="text/javascript" src="js/snow.js"></script>
     <script type="text/javascript" src="js/snowbase.js"></script>
