changed merger dependency

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="js/video-stream-merger.js"></script>
     <script type="text/javascript" src="js/merger.js"></script>
     <script type="text/javascript" src="js/stats.js"></script>
     <script type="text/javascript" src="js/snow.js"></script>
